@@ -1,13 +1,18 @@
 package com.echem.ecshop.domain;
 
 import jakarta.persistence.*;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import lombok.ToString;
+import org.hibernate.annotations.CreationTimestamp;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
 @NoArgsConstructor
@@ -20,26 +25,48 @@ public class User implements UserDetails {
     @GeneratedValue(strategy = GenerationType.SEQUENCE, generator = SEQ_NAME)
     @SequenceGenerator(name = SEQ_NAME, sequenceName = SEQ_NAME, allocationSize = 1)
     private Long id;
-    @Column(nullable = false)
-    private String userName;
+
+    @Column(nullable = false, unique = true)
+    private String username;
+
     private String firstName;
     private String lastName;
+
+    @ToString.Exclude
     @Column(nullable = false)
     private String password;
-    @Column(nullable = false)
+
+    @Column(nullable = false, unique = true)
     private String email;
+
     private String phone;
     @Enumerated(EnumType.STRING)
     private Role role;
-    private Boolean isEnable = false;
-    private Boolean isLocked = false;
-    @OneToOne (mappedBy = "user",cascade = CascadeType.REMOVE)
-    private Bucket bucket;
+    @Column(name = "account_non_expired", nullable = false)
+    private boolean accountNonExpired = true;
+    @Column(name = "account_non_locked", nullable = false)
+    private boolean accountNonLocked = true;
+    @Column(name = "credentials_non_expired", nullable = false)
+    private boolean credentialsNonExpired = true;
+    @Column(name = "enabled", nullable = false)
+    private boolean enabled = false;
+
+    @CreationTimestamp
+    private LocalDateTime created;
+
+//    @ToString.Exclude
+//    @OneToOne (mappedBy = "user",
+//            cascade = CascadeType.ALL)
+//    private Bucket bucket;
+//
+//    public void setBucket(Bucket bucket) {
+//        bucket.setUser(this);
+//        this.bucket = bucket;
+//    }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        SimpleGrantedAuthority authority = new SimpleGrantedAuthority(role.name());
-        return Collections.singletonList(authority);
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
     @Override
     public String getPassword() {
@@ -47,47 +74,32 @@ public class User implements UserDetails {
     }
 
     @Override
-    public String getUsername() {
-        return email;
-    }
+    public String getUsername() { return username; }
 
     @Override
     public boolean isAccountNonExpired() {
-        return true;
+        return accountNonExpired;
     }
 
     @Override
     public boolean isAccountNonLocked() {
-        return !isLocked;
+        return accountNonLocked;
     }
 
     @Override
     public boolean isCredentialsNonExpired() {
-        return true;
+        return credentialsNonExpired;
     }
 
     @Override
     public boolean isEnabled() {
-        return isEnable;
+        return enabled;
     }
 
-    public User(String userName, String password, String email,Role role) {
-        this.userName = userName;
-        this.password = password;
+    public User(String username, String password, String email, Role role) {
+        this.username = username;
         this.email = email;
         this.role = role;
-    }
-
-    @Override
-    public String toString() {
-        return "User{" +
-                "role=" + role +
-                ", phone='" + phone + '\'' +
-                ", email='" + email + '\'' +
-                ", lastName='" + lastName + '\'' +
-                ", firstName='" + firstName + '\'' +
-                ", userName='" + userName + '\'' +
-                ", id=" + id +
-                '}';
+        this.password = password;
     }
 }
